# scm-integration

./: .env.local  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  sample.env
scm/: __init__.py  github.json  gitlab.json  lib.py  scm.py
